# ceres

./: .clang-format  .clang-tidy  .gitignore  COPYING  README.md  tests.sh
ceresc/: Cargo.toml  test.crs
ceresc/src/: ceres.pest  expr.rs  main.rs  stmt.rs  top_level.rs  trans_unit.rs
compiler/: CMakeLists.txt  README.md
compiler/cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake  antlr4-generator.cmake.in  antlr4-runtime.cmake.in
compiler/src/: main.cpp
compiler/src/AST/: ASTStringifierVisitor.cpp  ASTStringifierVisitor.h  ASTVisitor.cpp  ASTVisitor.h  AbstractASTVisitor.cpp  AbstractASTVisitor.h  AbstractReturningASTVisitor.hpp  AntlrASTGeneratorVisitor.cpp  AntlrASTGeneratorVisitor.h  BinaryOperationExpression.cpp  BlockStatement.h  BoolLiteral.cpp  BoolLiteral.h  CommaExpression.cpp  CommaExpression.h  CompilationUnit.cpp  CompilationUnit.h  Expression.cpp  Expression.h  ExpressionStatement.cpp  ExpressionStatement.h  FloatLiteralExpression.cpp  FloatLiteralExpression.h  FunctionCallExpression.cpp  FunctionCallExpression.h  FunctionDefinition.cpp  FunctionDefinition.h  FunctionParameter.cpp  FunctionParameter.h  IdentifierExpression.cpp  IdentifierExpression.h  IfStatement.cpp  IfStatement.h  IntLiteral.cpp  IntLiteral.h  IntLiteralExpression.h  Node.cpp  Node.h  PostfixExpression.cpp  PostfixExpression.h  (+14 more)
compiler/src/AST/nodes/: AssignmentExpression.cpp  AssignmentExpression.h  BinaryOperationExpression.cpp  BinaryOperationExpression.h  BlockStatement.cpp  BlockStatement.h  BoolLiteral.cpp  BoolLiteral.h  CommaExpression.cpp  CommaExpression.h  CompilationUnit.cpp  CompilationUnit.h  Expression.cpp  Expression.h  ExpressionStatement.cpp  ExpressionStatement.h  FloatLiteralExpression.cpp  FloatLiteralExpression.h  ForStatement.cpp  ForStatement.h  FunctionCallExpression.cpp  FunctionCallExpression.h  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionDefinition.cpp  FunctionDefinition.h  FunctionParameter.h  IdentifierExpression.cpp  IdentifierExpression.h  IfStatement.cpp  IfStatement.h  IntLiteralExpression.cpp  IntLiteralExpression.h  Node.cpp  Node.h  PostfixExpression.cpp  PostfixExpression.h  PrefixExpression.cpp  PrefixExpression.h  ReturnStatement.cpp  (+9 more)
compiler/src/AST/nodes/Expressions/: AssignmentExpression.cpp  AssignmentExpression.h  BinaryOperationExpression.cpp  BinaryOperationExpression.h  BoolLiteralExpression.cpp  BoolLiteralExpression.h  CastExpression.cpp  CastExpression.h  CommaExpression.cpp  CommaExpression.h  Expression.cpp  Expression.h  FloatLiteralExpression.cpp  FloatLiteralExpression.h  FunctionCallExpression.cpp  FunctionCallExpression.h  IdentifierExpression.cpp  IdentifierExpression.h  IntLiteralExpression.cpp  IntLiteralExpression.h  PostfixExpression.cpp  PostfixExpression.h  PrefixExpression.cpp  PrefixExpression.h
compiler/src/AST/nodes/Statements/: BlockStatement.cpp  BlockStatement.h  ExpressionStatement.cpp  ExpressionStatement.h  ForStatement.cpp  ForStatement.h  FunctionDefinition.cpp  FunctionDefinition.h  IfStatement.cpp  IfStatement.h  ReturnStatement.cpp  ReturnStatement.h  Statement.cpp  Statement.h  VariableDeclaration.cpp  VariableDeclaration.h  VariableDeclarationStatement.cpp  VariableDeclarationStatement.h  WhileStatement.cpp  WhileStatement.h
compiler/src/Binding/: BindingVisitor.cpp  BindingVisitor.h  Scope.cpp  Scope.h  Symbol.cpp  Symbol.h  SymbolDeclaration.cpp  SymbolDeclaration.h  Type.cpp  Type.h
compiler/src/Codegen/: CodeGenerator.cpp  CodeGenerator.h  CodegenVisitor.cpp  CodegenVisitor.h
compiler/src/Diagnostics/: Diagnostics.cpp  Diagnostics.def  Diagnostics.h  FixItSpan.cpp  FixItSpan.h  ParserErrorListener.cpp  ParserErrorListener.h
compiler/src/Flow/: FlowCheckVisitor.cpp  FlowCheckVisitor.h
compiler/src/Typing/: BinaryOperation.cpp  BinaryOperation.h  Constness.cpp  Constness.h  Type.cpp  Type.h  TypeCheckVisitor.cpp  TypeCheckVisitor.h  TypeVisitor.cpp  TypeVisitor.h  Visibility.cpp  Visibility.h
compiler/src/utils/: InitCeres.cpp  InitCeres.h  SourceManager.cpp  SourceManager.h  SourceSpan.cpp  SourceSpan.h  log.hpp
compiler/syntax/: CeresLexer.g4  CeresParser.g4  SLCLexer.g4  SLCParser.g4
docs/: spec.md
docs/samples/: 001.functions.slc  002.types.crs  003.operators.slc  004.scopes.crs  TODO_FUTURE.crs
example/: gcd.crs  main.crs
tests/binding/: local_functions_different_order.crs
tests/binding/fail/: function_var_same_name.crs  local_var_different_order.crs  shadowing_same_scope.crs  unbound_var.crs  unknown_type.crs
tests/binding/pass/: extern_fun.crs  functions_different_order.crs  global_var.crs  global_var_different_order.crs  nested_local_var.crs  shadowing_different_scope.crs
tests/codegen/: test_driver.cpp
tests/codegen/pass/: average.crs  if.crs  return_zero.crs
tests/control_flow/errors/: no_return_on_non_void_function.crs
tests/control_flow/fail/: if_statement_only_one_return.crs  ill_return_inside_scope.crs  return_on_void.crs
tests/control_flow/pass/: return_in_scope.crs  return_inside_if.crs
tests/parser/: 001.functions.crs  001.functions.out  comma-with-assignment.crs
tests/parser/errors/: assignment-while-defining.crs  mising-semicolon.crs  rust-like-return-type.crs
tests/parser/fail/: for_with_parenthesis.crs  if_without_braces.crs  no_colon_argument_type.crs  type_without_semicolon.crs  unmatched_brace.crs  unmatched_parenthesis.crs
tests/parser/pass/: comma_with_assignment.crs  fn_type.crs  functions.crs  inner_functions.crs
tests/typing/: if_expr_bool.crs  int-in-if-condition.crs  mismatch_assign.crs  mismatch_expr.crs  mismatch_func_arg.crs  mismatched_var_decl.crs  mult_bool_literals.crs  mult_int_literals.crs  no_inference.crs
tests/typing/errors/: assign_to_const_var.crs
tests/typing/fail/: assign_to_function.crs  bool_main_empty.crs  call_a_non_function_type.crs  empty_return_non_void_function.crs  for_expr_bool.crs  infer_u32_expr_i32.crs  init_var_type_void.crs  mismatch_postfix.crs  mismatch_prefix.crs  mismatch_ret.crs  no_type_and_no_assignment.crs  read_uninitialized_var.crs  while_expr_bool.crs
(+6 files in other folders)
